// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`content pool coverage (regression guard) > A2 pool gaps match the known baseline 1`] = `
[
  {
    "cap": 6,
    "kind": "recognize",
    "level": "A2",
    "poolSize": 5,
    "topic": "cultural",
  },
  {
    "cap": 6,
    "kind": "recognize",
    "level": "A2",
    "poolSize": 5,
    "topic": "dialogue",
  },
  {
    "cap": 15,
    "kind": "produce",
    "level": "A2",
    "poolSize": 10,
    "topic": "error_correction",
  },
  {
    "cap": 9,
    "kind": "produce",
    "level": "A2",
    "poolSize": 1,
    "topic": "mineiro",
  },
  {
    "cap": 6,
    "kind": "recognize",
    "level": "A2",
    "poolSize": 5,
    "topic": "mineiro_vs_standard",
  },
  {
    "cap": 6,
    "kind": "recognize",
    "level": "A2",
    "poolSize": 4,
    "topic": "prepositions",
  },
  {
    "cap": 15,
    "kind": "produce",
    "level": "A2",
    "poolSize": 8,
    "topic": "reorder",
  },
  {
    "cap": 6,
    "kind": "recognize",
    "level": "A2",
    "poolSize": 5,
    "topic": "ser_estar",
  },
  {
    "cap": 6,
    "kind": "recognize",
    "level": "A2",
    "poolSize": 9,
    "topic": "true_false",
  },
  {
    "cap": 6,
    "kind": "recognize",
    "level": "A2",
    "poolSize": 4,
    "topic": "verbs_past",
  },
  {
    "cap": 6,
    "kind": "recognize",
    "level": "A2",
    "poolSize": 7,
    "topic": "verbs_present",
  },
]
`;

exports[`content pool coverage (regression guard) > B1 pool gaps match the known baseline 1`] = `
[
  {
    "cap": 6,
    "kind": "recognize",
    "level": "B1",
    "poolSize": 7,
    "topic": "cultural",
  },
  {
    "cap": 6,
    "kind": "recognize",
    "level": "B1",
    "poolSize": 3,
    "topic": "daily_routine",
  },
  {
    "cap": 6,
    "kind": "recognize",
    "level": "B1",
    "poolSize": 4,
    "topic": "dialogue",
  },
  {
    "cap": 15,
    "kind": "produce",
    "level": "B1",
    "poolSize": 3,
    "topic": "error_correction",
  },
  {
    "cap": 6,
    "kind": "recognize",
    "level": "B1",
    "poolSize": 4,
    "topic": "false_cognates",
  },
  {
    "cap": 15,
    "kind": "produce",
    "level": "B1",
    "poolSize": 4,
    "topic": "reorder",
  },
  {
    "cap": 6,
    "kind": "recognize",
    "level": "B1",
    "poolSize": 4,
    "topic": "travel",
  },
  {
    "cap": 6,
    "kind": "recognize",
    "level": "B1",
    "poolSize": 5,
    "topic": "true_false",
  },
  {
    "cap": 6,
    "kind": "recognize",
    "level": "B1",
    "poolSize": 2,
    "topic": "verbs_past",
  },
  {
    "cap": 6,
    "kind": "recognize",
    "level": "B1",
    "poolSize": 5,
    "topic": "work",
  },
]
`;

exports[`content pool coverage (regression guard) > B2 pool gaps match the known baseline 1`] = `
[
  {
    "cap": 6,
    "kind": "recognize",
    "level": "B2",
    "poolSize": 5,
    "topic": "cultural",
  },
  {
    "cap": 6,
    "kind": "recognize",
    "level": "B2",
    "poolSize": 3,
    "topic": "work",
  },
]
`;

exports[`content pool coverage (regression guard) > C1 pool gaps match the known baseline 1`] = `
[
  {
    "cap": 6,
    "kind": "recognize",
    "level": "C1",
    "poolSize": 5,
    "topic": "cultural",
  },
  {
    "cap": 15,
    "kind": "produce",
    "level": "C1",
    "poolSize": 5,
    "topic": "error_correction",
  },
  {
    "cap": 6,
    "kind": "recognize",
    "level": "C1",
    "poolSize": 4,
    "topic": "false_cognates",
  },
  {
    "cap": 15,
    "kind": "produce",
    "level": "C1",
    "poolSize": 4,
    "topic": "verbs_past",
  },
]
`;
